lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_base64_decode/buffer_append_base64_decode3/buffer_append_base64_decode3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_base64_decode/buffer_append_base64_decode3/buffer_append_base64_decode3.c:35:64: error: use of undeclared identifier 's__out'; did you mean 'stdout'?
    unsigned char * futag_target = buffer_append_base64_decode(s__out ,str_in ,sz_in_length ,e_charset );
                                                               ^~~~~~
                                                               stdout
/usr/include/stdio.h:144:14: note: 'stdout' declared here
extern FILE *stdout;            /* Standard output stream.  */
             ^
1 error generated.
